Structuration : Repository , Interface
