# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\CategoryContronller;
 
 /*
 |--------------------------------------------------------------------------
@@ -33,4 +34,17 @@ Route::group([
     Route::post('/logout', [AuthController::class, 'logout']);
     Route::post('/refresh', [AuthController::class, 'refresh']);
     Route::get('/user-profile', [AuthController::class, 'userProfile']);    
+});
+
+
+
+/**
+ * UserProfil
+ */
+
+Route::group([
+    'middleware' => 'api',
+    'prefix' => 'category'
+], function ($router) {
+    Route::post('/insertCategory', [CategoryContronller::class, 'insertCategory']);  
 });
